--- a/html/join.html
+++ b/html/join.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PHP 블로그 만들기</title>
+    <title>회원가입 페이지</title>
 
     <!-- CSS -->
     <link rel="stylesheet" href="assets/css/style.css">
@@ -40,7 +40,7 @@
         <nav class="nav__inner">
             <ul>
                 <li><a href="join.html">회원가입</a></li>
-                <li><a href="#">로그인</a></li>
+                <li><a href="login.html">로그인</a></li>
                 <li><a href="#">게시판</a></li>
                 <li><a href="#">블로그</a></li>
             </ul>
@@ -67,25 +67,25 @@
                         <legend class="blind">회원가입 영역</legend>
                         <div>
                             <label for="youEmail" class="required">이메일</label>
-                            <input type="email" id="youEmail" name="youEmail" placeholder="이메일을 적어주세요!" required>
+                            <input type="email" id="youEmail" name="youEmail" class="inputStyle" placeholder="이메일을 적어주세요!" required>
                         </div>
                         <div>
                             <label for="youName" class="required">이름</label>
-                            <input type="text" id="youName" name="youName" placeholder="이름을 적어주세요!" required>
+                            <input type="text" id="youName" name="youName" class="inputStyle" placeholder="이름을 적어주세요!" required>
                         </div>
                         <div>
                             <label for="youPass" class="required">비밀번호</label>
-                            <input type="password" id="youPass" name="youPass" placeholder="비밀번호 적어주세요!" required>
+                            <input type="password" id="youPass" name="youPass" class="inputStyle" placeholder="비밀번호 적어주세요!" required>
                         </div>
                         <div>
                             <label for="youPassC">비밀번호 확인</label>
-                            <input type="password" id="youPassC" name="youPassC" placeholder="다시 한번 적어주세요!" required>
+                            <input type="password" id="youPassC" name="youPassC" class="inputStyle" placeholder="다시 한번 적어주세요!" required>
                         </div>
                         <div>
                             <label for="youPhone">연락처</label>
-                            <input type="text" id="youPhone" name="youPhone" placeholder="연락처를 적어주세요!" required>
+                            <input type="text" id="youPhone" name="youPhone" class="inputStyle" placeholder="연락처를 적어주세요!" required>
                         </div>
-                        <button type="submit">회원가입 완료</button>
+                        <button type="submit" class="btnStyle">회원가입 완료</button>
                     </fieldset>
                 </form>
             </div>
