--- a/html/joinEnd.html
+++ b/html/joinEnd.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PHP 블로그 만들기</title>
+    <title>회원가입 완료 페이지</title>
 
     <!-- CSS -->
     <link rel="stylesheet" href="assets/css/style.css">
