--- a/html/join.html
+++ b/html/join.html
@@ -94,7 +94,10 @@
     <!-- main -->
 
     <footer id="footer">
-        <div class="footer__inner"></div>
+        <div class="footer__inner btStyle mb100 container">
+            <div>Copyright @ 2023 KDH</div>
+            <div>blog by KDH</div>
+        </div>
     </footer>
     <!-- footer -->
 </body>
