--- a/html/main.html
+++ b/html/main.html
@@ -39,9 +39,9 @@
         </div>
         <nav class="nav__inner">
             <ul>
-                <li><a href="#">회원가입</a></li>
-                <li><a href="#">로그인</a></li>
-                <li><a href="#">게시판</a></li>
+                <li><a href="join.html">회원가입</a></li>
+                <li><a href="login.html">로그인</a></li>
+                <li><a href="board.html">게시판</a></li>
                 <li><a href="#">블로그</a></li>
             </ul>
         </nav>
@@ -65,6 +65,7 @@
             <div class="intro__inner"></div>  각페이지 소개 배너
             <div class="join__inner"></div>  회원가입 페이지
             <div class="login__inner"></div>  로그인 페이지
+            <div class="board__inner"></div>  게시판 페이지
             
             <div class="sliders__inner"></div>           
             <div class="banners__inner"></div>  
@@ -80,7 +81,10 @@
     <!-- main -->
 
     <footer id="footer">
-        <div class="footer__inner"></div>
+        <div class="footer__inner btStyle mb100 container">
+            <div>Copyright @ 2023 KDH</div>
+            <div>blog by KDH</div>
+        </div>
     </footer>
     <!-- footer -->
 </body>
