--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@
             <h2>PHP</h2>
             <ul>
                 <li><a href="create/createMember.php">회원 테이블 만들기</a></li>
+                <li><a href="create/createBoard.php">게시판 테이블 만들기</a></li>
+                <br>
             </ul>
             <ul>
                 <li><a href="main/main.php">메인(main.php)</a></li>
@@ -48,6 +50,13 @@
                 <li><a href="join/joinsave.php">회원가입완료(joinsave.php)</a></li>
                 <li><a href="login/login.php">로그인(login.php)</a></li>
                 <li><a href="login/logout.php">로그아웃(logout.php)</a></li>
+                <br>
+
+                <li><a href="board/board.php">게시판(board.php)</a></li>
+                <li><a href="board/boardWrite.php">게시판 글쓰기(boardWrite.php)</a></li>
+                <li><a href="board/boardView.php">게시글 보기(boardView.php)</a></li>
+                <li><a href="board/boardModify.php">게시글 수정하기(boardModify.php)</a></li>
+                <li><a href="board/boardRemove.php">게시글 삭제하기(boardRemove.php)</a></li>
             </ul>
         </div>
     </div>
