--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
             <ul>
                 <li><a href="create/createMember.php">회원 테이블 만들기</a></li>
                 <li><a href="create/createBoard.php">게시판 테이블 만들기</a></li>
+                <li><a href="create/createBoardData.php">게시판 테이블 데이터 만들기</a></li>
                 <br>
             </ul>
             <ul>
