--- a/php2/html/loginfind.html
+++ b/php2/html/loginfind.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>로그인</title>
+    <title>아이디 찾기</title>
 
     <!-- CSS -->
     <link rel="stylesheet" href="assets/css/style.css">
@@ -24,7 +24,7 @@
     <header id="header">
         <div class="header__inner">
             <div>
-                <h2>로그인</h2>
+                <h2>아이디 찾기</h2>
             </div>
         </div>
     </header>
@@ -33,33 +33,29 @@
     <main id="main" class="container">
         <div class="join__inner">
             <h2>Abide By Beauty</h2>
-            <p>아이디와 비밀번호를 적어 로그인 해주세요.</p>
+            <p>가입시 입력한 정보를 입력하세요.</p>
             
             <div class="join__form">
                 <form action="#" name="#" method="post">
                     <fieldset>
                         <legend class="blind">회원가입 영역</legend>
                         <div>
-                            <label for="memberID"></label>
-                            <input type="text" id="memberID" name="memberID" class="inputStyle" placeholder="아이디" required>
+                            <label for="youName"></label>
+                            <input type="text" id="youName" name="youName" class="inputStyle" placeholder="이름 입력" required>
                         </div>
                         <div>
-                            <label for="youPass"></label>
-                            <input type="password" id="youPass" name="youPass" class="inputStyle" placeholder="비밀번호" required>
+                            <label for="youPhone"></label>
+                            <input type="text" id="youPhone" name="youPhone" class="inputStyle" placeholder="전화번호 입력" required>
                         </div>
                         
-                        <button type="submit" class="btnStyle3">로그인</button>
+                        <button type="submit" class="btnStyle3">아이디 찾기</button>
                     </fieldset>
                 </form>
             </div>
         </div> 
-        <div class="kakao">
-            <p>카카오 로그인</p>
-        </div>
-        <div class="find3">
-            <a href="#">아이디 찾기</a>
+        <div class="find">
             <a href="#">비밀번호 찾기</a>
-            <a href="#">회원가입 하기</a>
+            <a href="#">회원가입 찾기</a>
         </div>
     </main>
     <!-- main -->
