--- a/php2/html/joinEnd.html
+++ b/php2/html/joinEnd.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>회원가입 페이지</title>
+    <title>회원가입 완료</title>
 
     <!-- CSS -->
     <link rel="stylesheet" href="../html/assets/css/style.css">
