--- a/php2/index.html
+++ b/php2/index.html
@@ -19,6 +19,21 @@
             text-decoration: underline;
             text-underline-position: under;
         }
+        .swiper-button-prev,
+        .swiper-button-next {
+            width: 30px;
+            height: 56px;
+            /* background-color: #fff; */
+            background-image: url(../img/icon_main.svg);
+            background-size: 500px;
+        }
+        .swiper-button-next {
+            background-position: -52px 0;
+        }
+        .swiper-button-prev:after,
+        .swiper-button-next:after {
+            font-size: 0;
+        }
     </style>
 </head>
 <body>
@@ -29,7 +44,10 @@
                 <!-- <li><a href="html/main.html">메인(main.html)</a></li> -->
                 <li><a href="html/join.html">회원가입(join.html)</a></li>
                 <li><a href="html/joinEnd.html">회원가입완료(joinEnd.html)</a></li>
-                <li><a href="html/login.html">로그인(login.html)</a></li><br>
+                <li><a href="html/login.html">로그인(login.html)</a></li>
+                <li><a href="html/loginfind.html">아이디 찾기(loginfind.html)</a></li>
+                <li><a href="html/passwordfind.html">비밀번호 찾기(passwordfind.html)</a></li>
+                <li><a href="html/tos.html">약관동의(tos.html)</a></li>
                 <!-- <li><a href="html/board.html">게시판(board.html)</a></li>
                 <li><a href="html/boardModify.html">게시판 수정하기(boardModify.html)</a></li>
                 <li><a href="html/boardWrite.html">게시판 글쓰기(boardWrite.html)</a></li>
