--- a/php2/html/login.html
+++ b/php2/html/login.html
@@ -63,5 +63,29 @@
         </div>
     </main>
     <!-- main -->
+    <footer id="footer">
+        <div class="footer__inner">
+            <div class="logo">
+                <h1>ABB
+                    <p>COMMUNITY</p>
+                </h1>
+
+            </div>
+            <div class="fot">
+                <div class="nav">
+                    <ul>
+                        <li>뉴스보기</li>
+                        <li>공유게시판</li>
+                        <li>정보보기</li>
+                        <li>FAQ</li>
+                    </ul>
+                </div>
+                <div class="copyright">
+                    <p>COPYRIGHT©ABB</p>
+                    <p>ALL RIGHTS RESERVED</p>
+                </div>
+            </div>
+        </div> 
+    </footer>
 </body>
 </html>
