--- a/php2/html/passwordfindEnd.html
+++ b/php2/html/passwordfindEnd.html
@@ -38,22 +38,22 @@
     <main id="main" class="container">
         <div class="join__inner">
             <h2>Abide By Beauty</h2>
-            <p>가입시 입력한 정보를 입력하세요.</p>
+            <p>비밀번호를 재설정 해주세요.</p>
             
             <div class="join__form">
                 <form action="#" name="#" method="post">
                     <fieldset>
                         <legend class="blind">회원가입 영역</legend>
                         <div>
-                            <label for="youName"></label>
-                            <input type="text" id="youName" name="youName" class="inputStyle" placeholder="아이디 입력" required>
+                            <label for="youPass"></label>
+                            <input type="password" id="youPass" name="youPass" class="inputStyle" placeholder="비밀번호를 입력해주세요" required>
                         </div>
                         <div>
-                            <label for="youPhone"></label>
-                            <input type="text" id="youPhone" name="youPhone" class="inputStyle" placeholder="전화번호 입력" required>
+                            <label for="youPassC"></label>
+                            <input type="password" id="youPassC" name="youPassC" class="inputStyle" placeholder="비밀번호 확인" required>
                         </div>
                         
-                        <button type="submit" class="btnStyle3">비밀번호 찾기</button>
+                        <button type="submit" class="btnStyle3">로그인 하기</button>
                     </fieldset>
                 </form>
             </div>
