--- a/php2/html/passwordfindNum.html
+++ b/php2/html/passwordfindNum.html
@@ -9,6 +9,10 @@
         .passwordfind {
             padding: 20px 171px 20px 150px !important;
         }
+        .join__form {
+            margin-bottom: 95px;
+        }
+
     </style>
 
     <!-- CSS -->
@@ -38,27 +42,22 @@
     <main id="main" class="container">
         <div class="join__inner">
             <h2>Abide By Beauty</h2>
-            <p>가입시 입력한 정보를 입력하세요.</p>
+            <p>핸드폰 인증번호를 확인해주세요.</p>
             
             <div class="join__form">
                 <form action="#" name="#" method="post">
                     <fieldset>
                         <legend class="blind">회원가입 영역</legend>
                         <div>
-                            <label for="youName"></label>
-                            <input type="text" id="youName" name="youName" class="inputStyle" placeholder="아이디 입력" required>
-                        </div>
-                        <div>
                             <label for="youPhone"></label>
-                            <input type="text" id="youPhone" name="youPhone" class="inputStyle" placeholder="전화번호 입력" required>
+                            <input type="text" id="youPhone" name="youPhone" class="inputStyle" placeholder="인증번호를 입력해주세요." required>
                         </div>
-                        
-                        <button type="submit" class="btnStyle3">비밀번호 찾기</button>
                     </fieldset>
                 </form>
             </div>
+            <button type="submit" class="btnStyle3">비밀번호 찾기</button>
         </div> 
-        <div class="passwordfind">
+        <div class="passwordfind"> 
             <a href="#">아이디 찾기</a>
             <a href="#">회원가입</a>
         </div>
