--- a/php2/html/slider2.html
+++ b/php2/html/slider2.html
@@ -18,6 +18,7 @@
         }
         .slider__inner > p {
             text-align: center;
+            font-size: 20px;
         }
         .slider__inner > h2 {
             padding-top: 80px;
@@ -91,7 +92,7 @@
         $( document ).ready( function() {
             $( '.slider' ).slick( {
             autoplay: true,
-            autoplaySpeed: 40000,
+            autoplaySpeed: 4000,
             slidesToShow: 4,
             slidesToScroll: 1,
             });
