--- a/php2/html/login.html
+++ b/php2/html/login.html
@@ -23,9 +23,20 @@
 
     <header id="header">
         <div class="header__inner">
-            <div>
-                <h2>로그인</h2>
+            <div class="kategorie">
+                <h1>
+                    <a href="#"></a>
+                </h1>
             </div>
+            <div class="logo">
+                <h1>
+                    <a href="#"></a>
+                </h1>
+            </div>
+            <div class="user">
+                <a href="#"></a>
+            </div>
+        </div>
         </div>
     </header>
     <!-- //header -->
@@ -63,7 +74,7 @@
         </div>
     </main>
     <!-- main -->
-    <footer id="footer">
+    <!-- <footer id="footer">
         <div class="footer__inner">
             <div class="logo">
                 <h1>ABB
@@ -86,6 +97,6 @@
                 </div>
             </div>
         </div> 
-    </footer>
+    </footer> -->
 </body>
 </html>
