--- a/index.html
+++ b/index.html
@@ -26,38 +26,38 @@
         <div>
             <h2>HTML</h2>
             <ul>
-                <!-- <li><a href="html/main.html">메인(main.html)</a></li> -->
+                <li><a href="html/main.html">메인(main.html)</a></li>
                 <li><a href="html/join.html">회원가입(join.html)</a></li>
                 <li><a href="html/joinEnd.html">회원가입완료(joinEnd.html)</a></li>
                 <li><a href="html/login.html">로그인(login.html)</a></li><br>
-                <!-- <li><a href="html/board.html">게시판(board.html)</a></li>
+                <li><a href="html/board.html">게시판(board.html)</a></li>
                 <li><a href="html/boardModify.html">게시판 수정하기(boardModify.html)</a></li>
                 <li><a href="html/boardWrite.html">게시판 글쓰기(boardWrite.html)</a></li>
                 <li><a href="html/boardSearch.html">게시판 검색 결과(boardSearch.html)</a></li>
-                <li><a href="html/boardView.html">게시판 글보기(boardView.html)</a></li> -->
+                <li><a href="html/boardView.html">게시판 글보기(boardView.html)</a></li>
             </ul>
         </div>
         <div>
             <h2>PHP</h2>
             <ul>
-                <!-- <li><a href="create/createMember.php">회원 테이블 만들기</a></li>
+                <li><a href="create/createMember.php">회원 테이블 만들기</a></li>
                 <li><a href="create/createBoard.php">게시판 테이블 만들기</a></li>
                 <li><a href="create/createBoardData.php">게시판 테이블 데이터 만들기</a></li>
-                <br> -->
+                <br>
             </ul>
             <ul>
                 <li><a href="main/main.php">메인(main.php)</a></li>
                 <li><a href="join/join.php">회원가입(join.php)</a></li>
                 <li><a href="join/joinEnd.php">회원가입완료(joinEnd.php)</a></li>
                 <li><a href="login/login.php">로그인(login.php)</a></li>
-                <!-- <li><a href="login/logout.php">로그아웃(logout.php)</a></li>
-                <br> -->
+                <li><a href="login/logout.php">로그아웃(logout.php)</a></li>
+                <br>
 
-                <!-- <li><a href="board/board.php">게시판(board.php)</a></li>
+                <li><a href="board/board.php">게시판(board.php)</a></li>
                 <li><a href="board/boardWrite.php">게시판 글쓰기(boardWrite.php)</a></li>
                 <li><a href="board/boardView.php">게시글 보기(boardView.php)</a></li>
                 <li><a href="board/boardModify.php">게시글 수정하기(boardModify.php)</a></li>
-                <li><a href="board/boardRemove.php">게시글 삭제하기(boardRemove.php)</a></li> -->
+                <li><a href="board/boardRemove.php">게시글 삭제하기(boardRemove.php)</a></li>
             </ul>
         </div>
     </div>
