--- a/php2/html/joinEnd.html
+++ b/php2/html/joinEnd.html
@@ -11,10 +11,9 @@
     <link rel="stylesheet" href="../html/assets/css/style.css">
 
     <!-- SCRIPT -->
-    <script defer src="assts/js/common.js"></script>
+    <script defer src="assets/js/common.js"></script>
 
 </head>
-
 <body>
 
     <div id="skip">
@@ -24,19 +23,46 @@
     </div>
     <!-- //skip -->
 
-    <header id="header">
-        <div class="header__inner">
-            <h1 class="logo"><a href="./main.html">회원가입 완료</a></h1>
-        </div>
-    </header>
-    <!-- //header -->
-
-    <main id="main" class="container">
+    <main id="main" class="container mt100">
+        <header id="header">
+            <div class="header__inner">
+                <div class="kategorie">
+                    <div class="kategorie__menu">
+                        <img src="assets/img/kategorie.png" alt="">
+                    </div>
+                    <ul>
+                        <li><a href="#">기초</a></li>
+                        <li><a href="#">마스크팩</a></li>
+                        <li><a href="#">선케어</a></li>
+                        <li><a href="#">클렌징</a></li>
+                        <li><a href="#">메이크업</a></li>
+                        <li><a href="#">헤어</a></li>
+                        <li><a href="#">바디</a></li>
+                        <li><a href="#">커뮤니티</a></li>
+                    </ul>
+                </div>
+                <div class="logo">
+                    <h1>
+                        <a href="#"></a>
+                    </h1>
+                </div>
+                <div class="user">
+                    <a href="#">
+                        <img src="assets/img/user.png" alt="">
+                    </a>
+                    <ul>
+                        <li><a href="#">마이페이지</a></li>
+                        <li><a href="#">로그아웃</a></li>
+                    </ul>
+                </div>
+            </div>
+        </header>
+        <!-- //header -->
 
         <div calss="joinEnd__inner">
-            <p class="joinEnd__text">Abide By Beauty<br>
-                <a>정*석(닉네임)님 반갑습니다.</a>
-            </p>
+            <h2 class="joinEnd__h2 mt30">회원가입 완료</h2>
+            <p class="joinEnd__p mt20">정희석(닉네임)님 반갑습니다.</p>
+            
             <div class="joinEnd__form">
                 <p>ABB는 화장품 유통기한을 확인 하는 공간입니다.<br>
                     화장품의 유통기한을 간편하게 확인한 후<br>
