--- a/php2/html/header.html
+++ b/php2/html/header.html
@@ -60,7 +60,15 @@
         document.querySelector(".user").addEventListener("mouseout", e => {
             document.querySelector(".user ul").style.display = "none";
         });
+            
+        
 
+        // li.addEventListener("mouseover", e => {
+        //     li.querySelector("ul").style.display = "block";
+        // });
+        // li.addEventListener("mouseout", e => {
+        //     li.querySelector("ul").style.display = "none";
+        // });
     </script>
 </body>
 </html>
