--- a/php2/html/passwordfind.html
+++ b/php2/html/passwordfind.html
@@ -28,22 +28,49 @@
 
     <header id="header">
         <div class="header__inner">
-            <div>
-                <h2>비밀번호 찾기</h2>
+            <div class="kategorie">
+                <div class="kategorie__menu">
+                    <img src="assets/img/kategorie.png" alt="">
+                </div>
+                <ul>
+                    <li><a href="#">기초</a></li>
+                    <li><a href="#">마스크팩</a></li>
+                    <li><a href="#">선케어</a></li>
+                    <li><a href="#">클렌징</a></li>
+                    <li><a href="#">메이크업</a></li>
+                    <li><a href="#">헤어</a></li>
+                    <li><a href="#">바디</a></li>
+                    <li><a href="#">커뮤니티</a></li>
+                </ul>
+            </div>
+            <div class="logo">
+                <h1>
+                    <a href="#"></a>
+                </h1>
+            </div>
+            <div class="user">
+                <a href="#">
+                    <img src="assets/img/user.png" alt="">
+                </a>
+                <ul>
+                    <li><a href="#">마이페이지</a></li>
+                    <li><a href="#">로그아웃</a></li>
+                </ul>
             </div>
         </div>
     </header>
+    
     <!-- //header -->
 
-    <main id="main" class="container">
+    <main id="main" class="container mt70">
         <div class="join__inner">
-            <h2>Abide By Beauty</h2>
+            <h2>비밀번호 찾기</h2>
             <p>가입시 입력한 정보를 입력하세요.</p>
             
             <div class="join__form">
                 <form action="#" name="#" method="post">
                     <fieldset>
-                        <legend class="blind">회원가입 영역</legend>
+                        <legend class="blind">비밀번호 찾기 입력</legend>
                         <div>
                             <label for="youName"></label>
                             <input type="text" id="youName" name="youName" class="inputStyle" placeholder="아이디 입력" required>
