--- a/php2/html/main.html
+++ b/php2/html/main.html
@@ -232,7 +232,6 @@
         .slider1 {
             display: flex;
             align-items: center;
-            
             height: 300px;
             
         }
@@ -253,6 +252,10 @@
             border-radius: 5%;
             width: 200px;
             height: 200px;
+            transition: all 0.1s;
+        }
+        .slider1 .slick-slide img:hover {
+            transform: scale(1.1);
         }
         .slick-prev:before, .slick-next:before {
             color: #444444;
