--- a/php2/html/withdraw.html
+++ b/php2/html/withdraw.html
@@ -6,8 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>비밀번호 찾기</title>
     <style>
-        .passwordfind {
+        .line {
             padding: 20px 171px 20px 150px !important;
+            border-top: 1px solid #F06171;
         }
         .join__form {
             margin-bottom: 95px;
@@ -68,25 +69,23 @@
 
     <main id="main" class="container mt70">
         <div class="join__inner">
-            <h2>비밀번호 찾기</h2>
-            <p>핸드폰 인증번호를 확인해주세요.</p>
+            <h2>탈퇴하기</h2>
+            <p>탈퇴를 원하시면 비밀번호를 입력해주세요.</p>
             
             <div class="join__form">
                 <form action="#" name="#" method="post">
                     <fieldset>
-                        <legend class="blind">회원가입 영역</legend>
+                        <legend class="blind">탈퇴하기 영역</legend>
                         <div>
                             <label for="youPhone"></label>
-                            <input type="text" id="youPhone" name="youPhone" class="inputStyle" placeholder="인증번호를 입력해주세요." required>
+                            <input type="text" id="youPhone" name="youPhone" class="inputStyle" placeholder="비밀번호 입력" required>
                         </div>
                     </fieldset>
                 </form>
             </div>
-            <button type="submit" class="btnStyle3">비밀번호 찾기</button>
+            <button type="submit" class="btnStyle3">회원탈퇴</button>
         </div> 
-        <div class="passwordfind"> 
-            <a href="#">아이디 찾기</a>
-            <a href="#">회원가입</a>
+        <div class="line"> 
         </div>
     </main>
     <!-- main -->
