--- a/php2/index.html
+++ b/php2/index.html
@@ -108,8 +108,8 @@
                 <li><a href="html/passwordfindNum.html">비밀번호 찾기_인증번호(passwordfindNum.html)</a></li>
                 <li><a href="html/passwordfindEnd.html">비밀번호 찾기 완료(passwordfindEnd.html)</a></li>
                 <li><a href="html/tos.html">약관동의(tos.html)</a></li>
-                <li><a href="#">회원탈퇴</a></li>
-                <li><a href="#">회원탈퇴 완료</a></li>
+                <li><a href="html/withdraw.html">회원탈퇴</a></li>
+                <li><a href="html/withdrawcheck.html">회원탈퇴 완료</a></li>
                 <br><br>
                 <h3>마이페이지</h3>
                 <li><a href="#">마이페이지</a></li>
@@ -179,8 +179,8 @@
                 <li><a href="html/passwordfindNum.html">비밀번호 찾기_인증번호(passwordfindNum.html)</a></li>
                 <li><a href="html/passwordfindEnd.html">비밀번호 찾기 완료(passwordfindEnd.html)</a></li>
                 <li><a href="html/tos.html">약관동의(tos.html)</a></li>
-                <li><a href="#">회원탈퇴</a></li>
-                <li><a href="#">회원탈퇴 완료</a></li>
+                <li><a href="html/withdraw.html">회원탈퇴</a></li>
+                <li><a href="html/withdrawcheck.html">회원탈퇴 완료</a></li>
                 <br><br>
                 <li><a href="#">마이페이지</a></li>
                 <li><a href="#">정보 입력</a></li>
