--- a/php2/html/FAQ.html
+++ b/php2/html/FAQ.html
@@ -19,7 +19,7 @@
         } 
         
         .faq__form h3 {
-            padding: 15px 15px 15px 30px;
+            padding: 15px 15px 15px 40px;
             font-size: 16px;
             font-weight: 300;
             background-color: #fff;
@@ -28,13 +28,13 @@
         }
         .faq__form h3::before {
             position: absolute;
-            content: url(assets/img/pngwing.com.png);
-            /* background-image: url(assets/img/pngwing.com.png); */
+            content: '';
+            background-image: url(assets/img/pngwing.com.png);
+            background-size:cover;
             width: 30px;
             height: 30px;
-            top: 0;
+            top: 10px;
             left: 0;
-            background-color: #999;
         }
         .faq__form {
             width: 100%;
@@ -53,7 +53,6 @@
         }
 
     </style>
-
     <!-- CSS -->
     <link rel="stylesheet" href="assets/css/style.css">
 
