--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         <div>
             <h2>HTML</h2>
             <ul>
+                <li><a href="http://localhost/phpMyAdmin/index.php?route=/sql&server=1&db=phpclass&table=board&pos=0">관리자 페이지(http://localhost/phpMyAdmin)</a></li>
                 <li><a href="html/main.html">메인(main.html)</a></li>
                 <li><a href="html/join.html">회원가입(join.html)</a></li>
                 <li><a href="html/joinEnd.html">회원가입완료(joinEnd.html)</a></li>
@@ -35,12 +36,16 @@
                 <li><a href="html/boardWrite.html">게시판 글쓰기(boardWrite.html)</a></li>
                 <li><a href="html/boardSearch.html">게시판 검색 결과(boardSearch.html)</a></li>
                 <li><a href="html/boardView.html">게시판 글보기(boardView.html)</a></li>
+                <li><a href="html/adminAgree.html">관리자 회원가입 이용약관(adminAgree.html)</a></li>
+                <li><a href="html/adminSave.html">관리자 회원가입(adminSave.html)</a></li>
+                <li><a href="html/adminResult.html">관리자 회원가입 완료(adminResult.html)</a></li>
             </ul>
         </div>
         <div>
             <h2>PHP</h2>
             <ul>
                 <li><a href="create/createMember.php">회원 테이블 만들기</a></li>
+                <li><a href="create/createAdminMember.php">관리자 회원 테이블 만들기</a></li>
                 <li><a href="create/createBoard.php">게시판 테이블 만들기</a></li>
                 <li><a href="create/createBoardData.php">게시판 테이블 데이터 만들기</a></li>
                 <br>
