--- a/html/adminAgree.html
+++ b/html/adminAgree.html
@@ -81,7 +81,7 @@
                     </span>                    
                 </div>
                 <div class="agree__check">
-                    <input type="checkbox"> <p>약관 동의 하시겠습니까?</p>
+                    <input type="checkbox" class="agreecheck"> <p>약관 동의 하시겠습니까?</p>
                 </div>
                 <div class="agree__box">
                     <span>제3조 (약관의 효력과 변경)<br>
@@ -93,11 +93,12 @@
                     </span>
                 </div>
                 <div class="agree__check">
-                    <input type="checkbox"> <p>약관 동의 하시겠습니까?</p>
+                    <input type="checkbox" class="agreecheck"> <p>약관 동의 하시겠습니까?</p>
                 </div>
-                <button type="submit" class="btnStyle">동의</button>
+                <p class="agreeMsg"></p>
             </div>
-        </div> 
+            <a href="joinSave.php"><button class="btnStyle agreeBtn">동의</button></a>
+        </div>  
     </main>
     <!-- main -->
 
