--- a/php2/html/writeList.html
+++ b/php2/html/writeList.html
@@ -38,15 +38,18 @@
         .list {
             width: 78.05%;
             padding-bottom: 100px;
-            margin: 0 auto;
+            margin: 0 auto 0 auto;
             display: flex;
             flex-wrap: wrap;
+            justify-content: space-around;
+            /* left: 50%; */
         }
         .list__img img{
             border-radius: 3px;
             width: 100%;
         }
         .list__each {
+            /* transform: translateX(50%); */
             width: 250px;
             height: 400px;
             padding: 10px;
