--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <li><a href="html/boardModify.html">게시판 수정하기(boardModify.html)</a></li>
                 <li><a href="html/boardWrite.html">게시판 글쓰기(boardWrite.html)</a></li>
                 <li><a href="html/boardSearch.html">게시판 검색 결과(boardSearch.html)</a></li>
-                <li><a href="html/boardView.html">게시판 글보기(boardView.html)</a></li>
+                <li><a href="html/boardView.html">게시판 글보기(boardView.html)</a></li><br>
                 <li><a href="html/adminAgree.html">관리자 회원가입 이용약관(adminAgree.html)</a></li>
                 <li><a href="html/adminSave.html">관리자 회원가입(adminSave.html)</a></li>
                 <li><a href="html/adminResult.html">관리자 회원가입 완료(adminResult.html)</a></li>
